@@ -8,12 +8,12 @@
 
 <table border=0 cellpadding=0 cellspacing=4>
 	<tr valign=top>
-		<th>Title</th>
+		<th><jwc id="labelTitle"/></th>
 		<td><jwc id="inputTitle"/></td>
 	</tr>
 
 	<tr valign=top>
-		<th>Author</th>
+		<th><jwc id="labelAuthor"/></th>
 		<td><jwc id="inputAuthor"/></td>
 
 	<tr valign=top>
@@ -22,7 +22,7 @@
 	</tr>
 
 	<tr valign=top>
-		<th rowspan=2>Publisher</th>
+		<th rowspan=2><jwc id="labelPublisher"/></th>
 		<td><jwc id="inputPublisher"/> <jwc id="inputPublisherName"/></td>
 	</tr>
 
