@@ -40,6 +40,20 @@
 			</bindings>
 		</component>
 		<component>
+			<id>labelTitle</id>
+			<type>FieldLabel</type>
+			<bindings>
+				<binding>
+					<name>field</name>
+					<property-path>components.inputTitle</property-path>
+				</binding>
+				<binding>
+					<name>delegate</name>
+					<property-path>validationDelegate</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
 			<id>inputTitle</id>
 			<type>ValidatingTextField</type>
 			<bindings>
@@ -67,6 +81,20 @@
 					<name>required</name>
 					<field-name>Boolean.TRUE</field-name>
 				</field-binding>
+			</bindings>
+		</component>
+		<component>
+			<id>labelAuthor</id>
+			<type>FieldLabel</type>
+			<bindings>
+				<binding>
+					<name>field</name>
+					<property-path>components.inputAuthor</property-path>
+				</binding>
+				<binding>
+					<name>delegate</name>
+					<property-path>validationDelegate</property-path>
+				</binding>
 			</bindings>
 		</component>
 		<component>
@@ -118,6 +146,20 @@
 			</bindings>
 		</component>
 		<component>
+			<id>labelPublisher</id>
+			<type>FieldLabel</type>
+			<bindings>
+				<binding>
+					<name>field</name>
+					<property-path>components.inputPublisherName</property-path>
+				</binding>
+				<binding>
+					<name>delegate</name>
+					<property-path>validationDelegate</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
 			<id>inputPublisher</id>
 			<type>PropertySelection</type>
 			<bindings>
@@ -145,7 +187,7 @@
 				</binding>
 				<static-binding>
 					<name>displayName</name>
-					<value>PublisherName</value>
+					<value>Publisher</value>
 				</static-binding>
 				<binding>
 					<name>delegate</name>
