@@ -13,21 +13,21 @@
 	</tr>
 
 	<tr valign=top>
-		<th>Last Name</th>
+		<th><jwc id="labelLastName"/></th>
 		<td><jwc id="inputLastName"/></td>
 
 	<tr valign=top>
-		<th>E-Mail</th>
+		<th><jwc id="labelEmail"/></th>
 		<td><jwc id="inputEmail"/></td>
 	</tr>
 
 	<tr valign=top>
-		<th >Password</th>
+		<th ><jwc id="labelPassword1"/></th>
 		<td><jwc id="inputPassword1"/></td>
 	</tr>
 
 	<tr valign=top>
-		<th >Password (again)</th>
+		<th ><jwc id="labelPassword2"/></th>
 		<td><jwc id="inputPassword2"/></td>
 	</tr>
 
