@@ -8,12 +8,12 @@
 <table>
 
 	<tr>
-		<th>Email Address:</th>
+		<th><jwc id="labelEmail"/></th>
 		<td><jwc id="inputEmail"/></td>
 	</tr>
 
 	<tr>
-		<th>Password:</th>
+		<th><jwc id="labelPassword"/></th>
 		<td><jwc id="inputPassword"/></td>
 	</tr>
 
