@@ -48,6 +48,20 @@
 			</bindings>
 		</component>
 		<component>
+			<id>labelLastName</id>
+			<type>FieldLabel</type>
+			<bindings>
+				<binding>
+					<name>field</name>
+					<property-path>components.inputLastName</property-path>
+				</binding>
+				<binding>
+					<name>delegate</name>
+					<property-path>validationDelegate</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
 			<id>inputLastName</id>
 			<type>ValidatingTextField</type>
 			<bindings>
@@ -78,6 +92,20 @@
 			</bindings>
 		</component>
 		<component>
+			<id>labelEmail</id>
+			<type>FieldLabel</type>
+			<bindings>
+				<binding>
+					<name>field</name>
+					<property-path>components.inputEmail</property-path>
+				</binding>
+				<binding>
+					<name>delegate</name>
+					<property-path>validationDelegate</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
 			<id>inputEmail</id>
 			<type>ValidatingTextField</type>
 			<bindings>
@@ -105,6 +133,20 @@
 					<name>displayName</name>
 					<value>E-Mail</value>
 				</static-binding>
+			</bindings>
+		</component>
+		<component>
+			<id>labelPassword1</id>
+			<type>FieldLabel</type>
+			<bindings>
+				<binding>
+					<name>field</name>
+					<property-path>components.inputPassword1</property-path>
+				</binding>
+				<binding>
+					<name>delegate</name>
+					<property-path>validationDelegate</property-path>
+				</binding>
 			</bindings>
 		</component>
 		<component>
@@ -142,6 +184,20 @@
 			</bindings>
 		</component>
 		<component>
+			<id>labelPassword2</id>
+			<type>FieldLabel</type>
+			<bindings>
+				<binding>
+					<name>field</name>
+					<property-path>components.inputPassword2</property-path>
+				</binding>
+				<binding>
+					<name>delegate</name>
+					<property-path>validationDelegate</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
 			<id>inputPassword2</id>
 			<type>ValidatingTextField</type>
 			<bindings>
@@ -159,7 +215,7 @@
 				</static-binding>
 				<static-binding>
 					<name>displayName</name>
-					<value>Password</value>
+					<value>Password (again)</value>
 				</static-binding>
 				<binding>
 					<name>delegate</name>
